--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ a {
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 input {
@@ -40,6 +41,7 @@ input {
 button {
   border: none;
   padding: 0;
+  cursor: pointer;
 }
 
 /* #endregion */
@@ -49,7 +51,7 @@ button {
 .container {
   padding: 0 16px;
   margin: 0 auto;
-  max-width: 1158px;
+  max-width: 320px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -92,7 +94,6 @@ button {
   letter-spacing: 0.04em;
   color: #fff;
   background-color: #4d5ae5;
-  cursor: pointer;
   border-radius: 4px;
   display: block;
   border: none;
@@ -100,9 +101,42 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background-color, border;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.icon-close {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover>.icon-close,
+.close-btn:focus>.icon-close {
+  fill: #fff;
+}
+
 /* #endregion */
 
-/* #region Header !!! */
+/* #region Header */
 
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -114,29 +148,28 @@ button {
 .header-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .header-nav {
   display: flex;
   align-items: center;
-  gap: auto;
 }
 
 .header-logo {
   display: block;
   padding: 16px 0;
-  margin-right: 149px;
 }
 
 @media only screen and (min-width: 768px) {
   .header-logo {
+    padding: 24px 0;
     margin-right: 120px;
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .header-logo {
-    padding: 24px 0;
     margin-right: 76px;
   }
 }
@@ -147,7 +180,6 @@ button {
 
 .header-menu {
   background-color: transparent;
-  max-height: 24px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -157,6 +189,7 @@ button {
 }
 
 .icon-menu {
+  display: block;
   fill: #2f2f37;
 }
 
@@ -210,21 +243,21 @@ button {
 
 @media only screen and (min-width: 768px) {
   .header-address {
-    display: initial;
-    margin-left: auto;
+    display: block;
   }
 }
 
 .address-list {
   display: flex;
-  align-items: center;
-  gap: 40px;
+  flex-direction: column;
+  gap: 12px;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1158px) {
+@media only screen and (min-width: 1158px) {
   .address-list {
-    flex-direction: column;
-    gap: 12px;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
   }
 }
 
@@ -250,15 +283,99 @@ button {
 .nav-link:hover,
 .nav-link:focus,
 .address-link:hover,
-.address-link:focus,
-.nav-link.current {
+.address-link:focus {
   color: #404bbf;
   opacity: 1;
 }
 
+/* #region Mobile menu */
+
+.mobile-menu {
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: opacity, visibility;
+}
+
+@media only screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-menu-container {
+  padding-top: 72px;
+  padding-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-nav {
+  margin-bottom: auto;
+}
+
+.menu-nav-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.menu-nav-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-address {
+  display: block;
+  margin-bottom: 48px;
+}
+
+.menu-address-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.menu-address-link {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-nav-link:hover,
+.menu-nav-link:focus,
+.menu-address-link:hover,
+.menu-address-link:focus,
+.menu-nav-link.current {
+  color: #404bbf;
+}
+
+.mobile-menu .social-list {
+  justify-content: flex-start;
+  gap: 40px;
+}
+
 /* #endregion */
 
-/* #region Hero ! */
+/* #endregion */
+
+/* #region Hero */
 
 .hero {
   background: #2e2f42;
@@ -325,7 +442,7 @@ button {
 
 /* #endregion */
 
-/* #region Benefits ! */
+/* #region Benefits */
 
 .visually-hidden {
   position: absolute;
@@ -442,7 +559,7 @@ button {
 
 /* #endregion */
 
-/* #region Team ! */
+/* #region Team */
 
 .team {
   background-color: #f4f4fd;
@@ -539,7 +656,7 @@ button {
 
 /* #endregion */
 
-/* #region Portfolio ! */
+/* #region Portfolio */
 
 .portfolio-list {
   display: flex;
@@ -649,7 +766,7 @@ button {
 
 /* #endregion */
 
-/* #region Footer ! */
+/* #region Footer */
 
 .footer {
   background-color: #2e2f42;
@@ -860,52 +977,26 @@ button {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background-color: #fcfcfc;
   border-radius: 4px;
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  min-height: 623px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 72px 24px 24px;
+  padding: 72px 16px 24px;
+}
+
+@media only screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px;
+  }
 }
 
 .backdrop:not(.is-open) .modal {
   transform: translate(-50%, -70%);
-}
-
-.modal-close-btn {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: #e7e9fc;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  padding: 0;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: background-color, border;
-}
-
-.modal-close-btn:hover,
-.modal-close-btn:focus {
-  background-color: #404bbf;
-  border: none;
-}
-
-.icon-close {
-  fill: #2e2f42;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-close-btn:hover > .icon-close,
-.modal-close-btn:focus > .icon-close {
-  fill: #fff;
 }
 
 .modal-caption {
@@ -919,8 +1010,14 @@ button {
 }
 
 .modal-form {
-  width: 360px;
+  width: 256px;
   margin: 0 auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .modal-form {
+    width: 360px;
+  }
 }
 
 .modal-form-item {
@@ -950,10 +1047,16 @@ button {
   border-radius: 4px;
   height: 40px;
   width: 100%;
-  padding-left: 38px;
+  padding-left: 34px;
   outline: transparent;
   background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+@media only screen and (min-width: 768px) {
+  .modal-input-field {
+    padding-left: 38px;
+  }
 }
 
 .modal-input-field:focus {
@@ -1007,6 +1110,11 @@ input[type="checkbox"]:focus-visible + .modal-agreement-text>.custom-checkbox {
   outline-offset: 2px;
 }
 
+.modal-agreement-label {
+  display: flex;
+  align-items: center;
+}
+
 .custom-checkbox {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -1021,6 +1129,7 @@ input[type="checkbox"]:focus-visible + .modal-agreement-text>.custom-checkbox {
   fill: transparent;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: border, background-color, fill;
+  flex-shrink: 0;
 }
 
 /*.custom-checkbox > .checkbox-tick {
