--- a/css/styles.css
+++ b/css/styles.css
@@ -300,6 +300,7 @@ button {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  z-index: 999;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: opacity, visibility;
 }
@@ -318,7 +319,7 @@ button {
 }
 
 .menu-nav {
-  margin-bottom: auto;
+  margin-bottom: 168px;
 }
 
 .menu-nav-list {
@@ -383,7 +384,7 @@ button {
   background-image: linear-gradient(
     rgba(46, 47, 66, 0.7), 
     rgba(46, 47, 66, 0.7)), 
-    url(../images/bg-img.jpg);
+    url(../images/hero/bg-img_mob@1x.jpg);
   max-width: 1440px;
   margin: 0 auto;
   background-size: cover;
@@ -391,15 +392,43 @@ button {
   background-repeat: no-repeat;
 }
 
+@media (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)),
+        url(../images/hero/bg-img_mob@2x.jpg);
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .hero {
     padding: 112px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)),
+        url(../images/hero/bg-img_tab@1x.jpg);
+  }
+  @media (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)),
+        url(../images/hero/bg-img_tab@2x.jpg);
+    }
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .hero {
     padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)),
+        url(../images/hero/bg-img_lap@1x.jpg);
+  }
+  @media (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)),
+        url(../images/hero/bg-img_lap@2x.jpg);
+    }
   }
 }
 
