--- a/css/styles.css
+++ b/css/styles.css
@@ -301,6 +301,7 @@ button {
   visibility: hidden;
   pointer-events: none;
   z-index: 999;
+  display: flex;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: opacity, visibility;
 }
@@ -319,7 +320,7 @@ button {
 }
 
 .menu-nav {
-  margin-bottom: 168px;
+  margin-bottom: auto;
 }
 
 .menu-nav-list {
